<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/ic_bg"


    tools:context=".GenerateToken">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/tokenNo_GenerateTokenActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"

            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_edittext_register"
            android:ems="10"
            android:hint="@string/token_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="visible"
            />

        <EditText
            android:id="@+id/editText_issuedBy_GenerateTokenActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"

            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_edittext_register"
            android:clickable="false"
            android:ems="10"
            android:hint="@string/issued_by"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="visible" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"

            android:background="@drawable/rounded_edittext_register"

            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"

                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"

                app:ccp_autoDetectCountry="true"

                app:ccp_defaultNameCode="IN"
                app:ccp_showPhoneCode="false"
                app:ccp_textGravity="LEFT"
                app:ccp_textSize="16sp"

                />

            <EditText
                android:id="@+id/editText_mobile_GenerateTokenActivity"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>
    <!--<EditText
        android:id="@+id/editText_mobile_GenerateTokenActivity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"

        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext_register"
        android:hint="@string/mobile_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:visibility="visible"
         />-->

    <EditText
        android:id="@+id/editText_name_GenerateTokenActivity"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext_register"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"

            android:background="@drawable/rounded_edittext_register"

            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_Date_GenerateToken"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
android:background="@android:color/transparent"

                app:srcCompat="@android:drawable/ic_menu_my_calendar"
                tools:ignore="ContentDescription" />



        <TextView
            android:id="@+id/date_GenerateTokenActivity"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:hint="@string/date"
            android:textSize="18sp"

            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="visible"
            android:autofillHints="" />
        </LinearLayout>


    <Button
        android:id="@+id/button_sendToken_GenerateTokenActivity"
        android:layout_width="match_parent"
        android:layout_height="50dp"


        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_login"
        android:text="@string/send_token"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/button_clearToken_GenerateTokenActivity"
        android:layout_width="match_parent"
        android:layout_height="50dp"


        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_login"
        android:text="@string/clear_token"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
         />

    <Button
        android:id="@+id/button_awaitingRequest_GenerateTokenActivity"
        android:layout_width="match_parent"
        android:layout_height="50dp"


        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_login"
        android:text="@string/awaiting_request"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
         />




    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>