<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:srcCompat="@drawable/ic_account_circle_black_24dp"

                tools:ignore="ContentDescription"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="75dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"

                android:background="@drawable/rounded_edittext_register"

                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"

                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="5dp"

                    app:ccp_autoDetectCountry="true"

                    app:ccp_defaultNameCode="IN"
                    app:ccp_showPhoneCode="false"
                    app:ccp_textGravity="LEFT"
                    app:ccp_textSize="16sp"

                    />

                <EditText
                    android:id="@+id/mobile_LoginActivity"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/mobile_number"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>
            <!-- <EditText
                android:id="@+id/email_loginActivity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:padding="10dp"
                android:textColor="#00ACC1"
                android:textStyle="bold"
                android:visibility="visible"
                android:hint="Email"
                android:background="@drawable/rounded_edittext_register"
                android:ems="10"
                android:inputType="textEmailAddress" />-->
            <EditText
                android:id="@+id/verify_otp_LoginActivity"

                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_edittext_register"
                android:ems="10"
                android:hint="OTP"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:visibility="visible"

                tools:visibility="visible" />
            <!-- <EditText
                android:id="@+id/password_LoginActivity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_edittext_register"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#00ACC1"
                android:textStyle="bold"
                android:visibility="visible"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="349dp"
                tools:visibility="visible" />-->

            <Button
                android:id="@+id/send_button_LoginActivity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"


                android:layout_marginEnd="32dp"
                android:background="@drawable/button_login"

                android:text="@string/send_otp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="229dp"
                tools:layout_editor_absoluteY="431dp" />

            <Button
                android:id="@+id/verify_button_LoginActivity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_login"
                android:text="@string/verify"
                android:textColor="@android:color/white"

                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="513dp" />





            <!--<Button
                android:id="@+id/register_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/create_a_new_account"
                android:background="@drawable/button_login"
                android:textColor="#0097A7"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"

                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="513dp" />-->


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

